force-app/main/default/objects/Shoot_Schedule__c/Shoot_Schedule__c.object-meta.xml
<CustomObject>
    <description>Operational scheduling records for studio shoots and production slots.</description>
    <label>Shoot Schedule</label>
    <nameField>
        <displayFormat>SS-{0000}</displayFormat>
        <label>Shoot Schedule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shoot Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>