force-app/main/default/objects/Shoot_Schedule__c/fields/Production_Lead__c.field-meta.xml
<CustomField>
    <fullName>Production_Lead__c</fullName>
    <label>Production Lead</label>
    <length>80</length>
    <type>Text</type>
</CustomField>