force-app/main/default/objects/Shoot_Schedule__c/fields/Studio_Project__c.field-meta.xml
<CustomField>
    <fullName>Studio_Project__c</fullName>
    <label>Studio Project</label>
    <referenceTo>Studio_Project__c</referenceTo>
    <relationshipLabel>Shoot Schedules</relationshipLabel>
    <relationshipName>ShootSchedules</relationshipName>
    <type>Lookup</type>
</CustomField>